# water-level-producer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
src/: config.py  main.py  schemas.py
src/consumers/: iceberg_sink.py
src/producers/: water_producer.py
